--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,18 @@
 {
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
+    "express": "^4.19.2",
+    "socket.io": "^4.7.5",
+    "websocket": "^1.0.34",
     "ws": "^8.16.0"
   }
 }
