--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "react-dom": "^18.2.0",
     "react-player": "^2.16.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "socket.io-client": "^4.7.5",
+    "web-vitals": "^2.1.4",
+    "websocket": "^1.0.34"
   },
   "scripts": {
     "start": "react-scripts start",
